themes/lost-theme/assets/css/main.css
/* ... */
.commenter {
	position: relative;
	width: 100%;
	padding-top: 1rem;

	.giscus {
		margin: 0 auto;
		opacity: 0.9;
	}

	&::before { /* The footer gradient */
		content: '';
		position: absolute;
		bottom: -6px;
		right: -12px;
		height: 110%;
		width: calc(100% + 24px);
		border-radius: var(--round);
		border: 0px solid var(--text-inv);
		pointer-events: none;
		background: linear-gradient(calc(0deg - 10deg), rgb(from var(--text-inv) r g b / 33.3%) 0%, rgb(from var(--text-inv) r g b / 0%) 66.7%);
	}
}

.ribbon {
	position: absolute;
	top: 0;
	right: 0;
	padding-block: 0.25lh;
	padding-inline: 1.25lh;
	line-height: 1.25;
	text-align: center;
	text-shadow: 1px 1px 4px var(--text);
	color: var(--text-inv);
	font-size: 0.67em;
	font-weight: bold;
	clip-path: polygon(100% 100%, 0 100%, 999px calc(100% - 999px), calc(100% - 999px) calc(100% - 999px));
	/*background-color: rgb(from var(--accent) r g b / 90%);*/
	background:
		/*repeating-linear-gradient(-30deg, rgb(from var(--text-inv) r g b / 25%) 0 10px, rgb(from var(--accent) r g b / 25%) 10px 20px),*/
		linear-gradient(to right, transparent -33.3%, var(--accent) 33.3%, var(--accent) 66.6%, transparent 133.3%);
	pointer-events: none;
	user-select: none;
	z-index: 999;
	transform: translate(calc((1 - cos(45deg))*100%), -100%) rotate(45deg);
	transform-origin: 0% 100%;
}

.lifter {
	display: none;
	position: fixed;
	right: clamp(14px, 2%, 48px);
	bottom: 32px;
	width: 5%;
	min-width: 24px;
	max-width: 28px;
	aspect-ratio: 1/1;
	scale: 0;
	padding: 0;
	border-radius: 50%;
	opacity: 0;
	cursor: pointer;
	box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.33);
	transition: all var(--short) cubic-bezier(0.175, 0.885, 0.32, 1.275); /*transition: all 0.33s ease-out;*/
	transition-behavior: allow-discrete;

	&.visible {
		display: block;
		scale: 1;
		opacity: 0.67 !important;
	}
	&:hover {
		opacity: 100%;
		scale: 1.2;
	}
}

.pager {
	display: flex;
	flex: 1 0 auto;
	gap: 8px;
	align-items: end;
	justify-content: space-between;
	container-type: inline-size;
	font-size: 0.5em;
	font-size: clamp(0.33em, 3.33cqw, 0.75em);
	overflow: hidden;

	& span {
		align-items: center;
		color: color-mix(in srgb, var(--text) 67%, transparent);
		text-shadow: -1px 1px 2px rgba(0, 0, 0, 0.33);
		user-select: none;

		& a {
			outline-color: rgb(from var(--accent) r g b / 67%);;
			outline-offset: -2px;
		}
		&:only-child {
			margin: 0 auto !important;
			justify-self: center !important;
		}
		&:first-child, &:last-child {
			display: flex;
			flex: 1;
		}
		&:last-child {
			justify-content: flex-end;
		}
	}
}

.breadcrumber {
	padding: 0 0.5rem;
	overflow: hidden;

	& ol, ul {
		display: flex;
		flex-wrap: nowrap;
	}
	& li {
		list-style: none;

		&:last-child {
			overflow: hidden;
			text-overflow: ellipsis;
		}
		&:not(:last-child)::after {
			display: inline-block;
			margin: 0 0.25rem;
			color: var(--accent);
			content: "▸"; /* → */
		}
	}
}

.hs, .hs1, .hs2, .hs3 { /* Horizontal separators */
	display: block;
	height: 2px;
	width: 2px;
	background-color: transparent;
	border-bottom: 1px solid #ddd;
}
.hs1 {height: 4px;}
.hs2 {height: 8px;}
.hs3 {height: 16px;}

.heading {
	display: flex;
	flex-wrap: nowrap;
	gap: 8px;
	justify-content: space-between;
	align-items: center;
	width: 100%;
	/*overflow-x: hidden;*/
	border: 1px solid rgba(0, 0, 0, 0.25);

	& img {
		display: block;
		height: auto;
		width: auto;
		max-height: 40px;
		min-width: 0; /* https://stackoverflow.com/q/36230944/2805176 */
		flex-grow: 0;
		flex-shrink: 1;

		&:first-child {
			flex-grow: 0;
			flex-shrink: 0;
			height: 100%;
		}
	}
	& h1 {
		display: block;
		flex-grow: 1; /* Allows the title to fill the remaining space */
		white-space: nowrap;
	}
}

#view-main > table:first-of-type:first-child { /* The page table heading */
	position: relative;
	margin-bottom: 0;
	padding-top: 4px;
	border: none;
	background: none;

	&::before { /* The heading gradient */
		content: '';
		position: absolute;
		top: 0;
		right: -12px;
		height: clamp(80px, 210%, 110px);
		width: calc(100% + 24px);
		border-radius: var(--round);
		border: 0px solid var(--text-inv);
		pointer-events: none;
		background: linear-gradient(calc(180deg - 3.3deg), rgb(from var(--text-inv) r g b / 33.3%) 0%, rgb(from var(--text-inv) r g b / 0%) 66.7%);
	}

	& tr {
		background: none;

		& p {
			all: unset; /* Necessary to manage when Hugo wraps in <p> MD content inside HTML! */
		}
		& th, td {
			vertical-align: middle;
			font-size: 0px; /* Remove img spacings ↴ */
			line-height: 0;
			border: none;
			user-select: none;
			filter: drop-shadow(-1px 1px 1px rgba(0, 0, 0, 0.33));
		}
		& th:first-child, td:first-child { /* Icon Cell */
			width: 48px;
			padding-right: 0.1rem;
			cursor: default;
			pointer-events: none;

			& img {
				height: calc(40px * var(--heading-icon-size, 1));
				width: auto;
			}
		}
		& th:nth-child(2), td:nth-child(2) { /* Shields Cell */
			height: 20px;
			padding-inline: 0.5rem;
			white-space: nowrap;
			overflow-x: auto;
			mask-image: linear-gradient(to left, transparent, black 0.5rem, black calc(100% - 0.5rem), transparent 100%);
			-webkit-mask-image: linear-gradient(to left, transparent, black 0.5rem, black calc(100% - 0.5rem), transparent 100%);
			/*display: flex;
			width: 100%;
			flex-wrap: nowrap;
			flex: 0 1 auto;
			gap: 3px;
			justify-content: flex-end;
			align-items: center;
			*/
			& img {
				height: 22px;
				width: auto;
				max-width: 100%; /* Unlocks cell overflow & scrolling! But squashes images wider than container... */
				padding: 1px 0;
			}
			& >:not(:last-child), p >:not(:last-child) {
				margin-right: 0.33rem;
			}
			&::-webkit-scrollbar {
				height: calc(var(--scroll) / 1.5);
			}
		}
	}
}
/* ... */

